<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.UserDetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00838f">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/user_detail_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_toEndOf="@id/user_avatar"
            android:maxLines="1"
            android:text="@string/default_name"
            android:textSize="24sp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout style="@style/UserDetailCardViewLinearLayout">

            <androidx.cardview.widget.CardView style="@style/UserDetailCardView">

                <LinearLayout style="@style/UserDetailCardViewLinearLayout">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_detail_contacts"
                        android:textColor="#f57c00"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout style="@style/UserDetailCardViewLinearLayout">

                        <TextView
                            android:id="@+id/user_detail_mail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="16dp"
                            android:autoLink="email"
                            android:text="@string/default_mail"
                            android:textColorLink="#576586"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="16dp"
                            android:maxLines="1"
                            android:text="@string/user_detail_mail"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout style="@style/UserDetailCardViewLinearLayout">

                        <TextView
                            android:id="@+id/user_detail_cell"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="16dp"
                            android:autoLink="phone"
                            android:text="@string/default_cell"
                            android:textColorLink="#576586"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="16dp"
                            android:maxLines="1"
                            android:text="@string/user_detail_cell"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout style="@style/UserDetailCardViewLinearLayout">

                        <TextView
                            android:id="@+id/user_detail_phone"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="16dp"
                            android:autoLink="phone"
                            android:text="@string/default_phone"
                            android:textColorLink="#576586"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="16dp"
                            android:maxLines="1"
                            android:text="@string/user_detail_phone"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                style="@style/UserDetailCardView"
                android:layout_marginBottom="16dp">

                <LinearLayout style="@style/UserDetailCardViewLinearLayout">

                    <TextView
                        android:id="@+id/user_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/user_detail_about"
                        android:textColor="#f57c00"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout style="@style/UserDetailCardViewLinearLayout">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:maxLines="1"
                            android:text="@string/user_detail_location"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/user_detail_location"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/default_location"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout style="@style/UserDetailCardViewLinearLayout">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:maxLines="1"
                            android:text="@string/user_detail_dob"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/user_detail_dob"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/default_dob"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout style="@style/UserDetailCardViewLinearLayout">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:maxLines="1"
                            android:text="@string/user_detail_registered"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/user_detail_registered"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:text="@string/default_registered"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>